Adjust tour modal spacing and ensure App.css import

--- a/src/components/TourModal.module.css
+++ b/src/components/TourModal.module.css
@@ -170,7 +170,6 @@
     
     .atcWrapper {
       margin-top: 2em;
-      margin-bottom: 2em;
     }
     
   
